# cmlproject

./: Makefile  config.yaml  main.py  progress.txt  pyproject.toml  requirements.txt  test_1.py
artifacts/data/: X_test.csv  X_train.csv  Y_test.csv  Y_train.csv
mlruns/0/: meta.yaml
mlruns/318563819470040890/: meta.yaml
mlruns/318563819470040890/801fcd05b4524d649fcdb384f7b1db4e/: meta.yaml
mlruns/318563819470040890/801fcd05b4524d649fcdb384f7b1db4e/metrics/: accuracy  f1  precision  recall
mlruns/318563819470040890/801fcd05b4524d649fcdb384f7b1db4e/outputs/m-a32aa5c7798a4e658fa2b11dfc09cfb0/: meta.yaml
mlruns/318563819470040890/801fcd05b4524d649fcdb384f7b1db4e/tags/: mlflow.runName  mlflow.source.git.commit  timestamp
mlruns/318563819470040890/models/m-a32aa5c7798a4e658fa2b11dfc09cfb0/: meta.yaml
mlruns/318563819470040890/models/m-a32aa5c7798a4e658fa2b11dfc09cfb0/artifacts/: MLmodel  conda.yaml  model.pkl  requirements.txt
mlruns/318563819470040890/models/m-a32aa5c7798a4e658fa2b11dfc09cfb0/metrics/: accuracy  f1  precision  recall
mlruns/models/churn_prediction/: meta.yaml
mlruns/models/churn_prediction/version-1/: meta.yaml
pipelines/: data_pipeline.py  streaming_inference_pipeline.py  training_pipeline.py
src/: data_ingestion.py  data_splitter.py  feature_bining.py  feature_scaling.py  feture_encoding.py  handle_missing_values.py  model_building.py  model_evaluation.py  model_inference.py  model_training.py  outliers_detection.py
utils/: config.py  mlflow_utils.py
